apps/stackgres/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stackgres
  labels:
    name: stackgres
